# velmo

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env  .gitignore  Cargo.toml  rustfmt.toml  sea-orm.sh
backend/src/: main.rs
backend/src/rest/: mod.rs
backend/src/rest/accounts/: all.rs  create.rs  delete.rs  mod.rs
backend/src/rest/user/: create.rs  exists.rs  mod.rs
backend/src/utils/: auth_user.rs  jwks.rs  mod.rs
frontend/: orval.config.ts  package-lock.json  package.json
frontend/api/: axiosInstance.ts
frontend/api/account/: account.ts
frontend/api/model/: accounttype.ts  createAccountRequest.ts  createUserRequest.ts  deleteAccountRequest.ts  index.ts  model.ts
frontend/api/user/: user.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/accounts/: page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/components/: login-btn.tsx
frontend/components/accounts/: Accounts.tsx  AllAccount.tsx  AllAccounts.tsx  Create.tsx
frontend/components/dashboard/: Dashboard.tsx  Login.tsx  SiteHeader.tsx
frontend/components/dashboard/sidebar/: AppSidebar.tsx  NavDocuments.tsx  NavMain.tsx  NavSecondary.tsx  NavUser.tsx
frontend/provider/: SessionLogout.tsx
frontend/utils/next-auth/: refreshToken.ts
frontend/utils/next-auth/types/: next-auth.d.ts
